fixed copyright being unreadable in dark mode

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -14,6 +14,6 @@
 
 .copyright {
 		font-size: 0.9em;
-		color: black;
+		color: var( --text );
 		text-align: center;
 }
